# huffman_lib

./: CMakeLists.txt  README.rst
include/huffman/: core.h  os.h
src/: compressor.cc  core.cc  frequency_node.cc  key_map.cc
